--- a/package.json
+++ b/package.json
@@ -9,6 +9,7 @@
     "lint": "next lint"
   },
   "dependencies": {
+    "@formspree/react": "^3.0.0",
     "bootstrap": "^5.3.5",
     "embla-carousel-react": "^8.6.0",
     "next": "15.3.1",
