--- a/package.json
+++ b/package.json
@@ -12,7 +12,8 @@
     "@formspree/react": "^3.0.0",
     "next": "15.3.1",
     "react": "^19.0.0",
-    "react-dom": "^19.0.0"
+    "react-dom": "^19.0.0",
+    "react-responsive": "^10.0.1"
   },
   "devDependencies": {
     "@eslint/eslintrc": "^3",
